# WMConfig-Translator

./: CMakeLists.txt  main.cpp
includes/: conf_utils.h  formatting.h  hyprland.h  niri.h  window_manager.h
utils/: conf_utils.cpp  formatting.cpp  hyprland.cpp  niri.cpp  window_manager.cpp
